[tool.poetry]
name = "my-python-template"
version = "0.1.0"
description = "项目简介"
license = "MIT"
authors = ["wujingtao <601595686@qq.com>"]
readme = "README.md"
homepage = "https://github.com/wu-jingtao/my-python-template"
repository = "https://github.com/wu-jingtao/my-python-template"
documentation = "https://github.com/wu-jingtao/my-python-template"
keywords = ["my-python-template"]
packages = [{include = "my-python-template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
